--- a/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
+++ b/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
@@ -44,7 +44,7 @@
                 <h2
                     class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
                 >
-                    Reporte
+                    Reporte Aula
                 </h2>
             </div>
         </div>
