--- a/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
+++ b/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
@@ -47,6 +47,8 @@
                     Reporte Aula
                 </h2>
             </div>
+            <button mat-raised-button (click)="openStudentRegistrationModal()">Registrar Estudiante</button>
+
         </div>
     </div>
 
