--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -24,93 +24,131 @@
                 </mat-form-field>
             </div>
             <div class="flex flex-col gap-4">
-                <div class="flex gap-4">
-                    <button mat-button>Asignar Estudiantes</button>
-
-                    @if(isTestEnabled){
-                    <button mat-button>Detener Prueba Psicológica</button>
-
-                    } @else {
-                    <button mat-button>Iniciar Prueba Psicológica</button>
-
-                    }
+                <div>
+                    <mat-button-toggle-group
+                        [(ngModel)]="items"
+                        aria-label="Font Style"
+                    >
+                        <mat-button-toggle value="list"
+                            >Listar</mat-button-toggle
+                        >
+                        <mat-button-toggle value="assign"
+                            >Asignar Estudiantes</mat-button-toggle
+                        >
+                        <mat-button-toggle value="register"
+                            >Registrar Estudiantes</mat-button-toggle
+                        >
+                    </mat-button-toggle-group>
                 </div>
                 <div>
-                    <table
-                        mat-table
-                        [dataSource]="dataSource"
-                        class="mat-elevation-z8"
-                    >
-                        <!-- Checkbox Column -->
-                        <ng-container matColumnDef="select">
-                            <th mat-header-cell *matHeaderCellDef>
-                                <mat-checkbox
-                                    (change)="$event ? toggleAllRows() : null"
-                                    [checked]="
-                                        selection.hasValue() && isAllSelected()
-                                    "
-                                    [indeterminate]="
-                                        selection.hasValue() && !isAllSelected()
-                                    "
-                                    [aria-label]="checkboxLabel()"
-                                >
-                                </mat-checkbox>
-                            </th>
-                            <td mat-cell *matCellDef="let row">
-                                <mat-checkbox
-                                    (click)="$event.stopPropagation()"
-                                    (change)="
-                                        $event ? selection.toggle(row) : null
-                                    "
-                                    [checked]="selection.isSelected(row)"
-                                    [aria-label]="checkboxLabel(row)"
-                                >
-                                </mat-checkbox>
-                            </td>
-                        </ng-container>
+                    @switch(items){ @case("list"){
+                    <div class="flex flex-col gap-4">
+                        <div class="flex gap-4">
+                            @if(isTestEnabled){
+                            <button mat-button>
+                                Detener Prueba Psicológica
+                            </button>
 
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="position">
-                            <th mat-header-cell *matHeaderCellDef>No.</th>
-                            <td mat-cell *matCellDef="let element">
-                                {{ element.position }}
-                            </td>
-                        </ng-container>
+                            } @else {
+                            <button mat-button>
+                                Iniciar Prueba Psicológica
+                            </button>
 
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef>Name</th>
-                            <td mat-cell *matCellDef="let element">
-                                {{ element.name }}
-                            </td>
-                        </ng-container>
+                            }
+                        </div>
+                        <table
+                            mat-table
+                            [dataSource]="dataSource"
+                            class="mat-elevation-z8"
+                        >
+                            <!-- Checkbox Column -->
+                            <ng-container matColumnDef="select">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    <mat-checkbox
+                                        (change)="
+                                            $event ? toggleAllRows() : null
+                                        "
+                                        [checked]="
+                                            selection.hasValue() &&
+                                            isAllSelected()
+                                        "
+                                        [indeterminate]="
+                                            selection.hasValue() &&
+                                            !isAllSelected()
+                                        "
+                                        [aria-label]="checkboxLabel()"
+                                    >
+                                    </mat-checkbox>
+                                </th>
+                                <td mat-cell *matCellDef="let row">
+                                    <mat-checkbox
+                                        (click)="$event.stopPropagation()"
+                                        (change)="
+                                            $event
+                                                ? selection.toggle(row)
+                                                : null
+                                        "
+                                        [checked]="selection.isSelected(row)"
+                                        [aria-label]="checkboxLabel(row)"
+                                    >
+                                    </mat-checkbox>
+                                </td>
+                            </ng-container>
 
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="weight">
-                            <th mat-header-cell *matHeaderCellDef>Weight</th>
-                            <td mat-cell *matCellDef="let element">
-                                {{ element.weight }}
-                            </td>
-                        </ng-container>
+                            <!-- Position Column -->
+                            <ng-container matColumnDef="position">
+                                <th mat-header-cell *matHeaderCellDef>No.</th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.position }}
+                                </td>
+                            </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="symbol">
-                            <th mat-header-cell *matHeaderCellDef>Symbol</th>
-                            <td mat-cell *matCellDef="let element">
-                                {{ element.symbol }}
-                            </td>
-                        </ng-container>
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="name">
+                                <th mat-header-cell *matHeaderCellDef>Name</th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.name }}
+                                </td>
+                            </ng-container>
 
-                        <tr
-                            mat-header-row
-                            *matHeaderRowDef="displayedColumns"
-                        ></tr>
-                        <tr
-                            mat-row
-                            *matRowDef="let row; columns: displayedColumns"
-                            (click)="selection.toggle(row)"
-                        ></tr>
-                    </table>
+                            <!-- Weight Column -->
+                            <ng-container matColumnDef="weight">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    Weight
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.weight }}
+                                </td>
+                            </ng-container>
+
+                            <!-- Symbol Column -->
+                            <ng-container matColumnDef="symbol">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    Symbol
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    {{ element.symbol }}
+                                </td>
+                            </ng-container>
+
+                            <tr
+                                mat-header-row
+                                *matHeaderRowDef="displayedColumns"
+                            ></tr>
+                            <tr
+                                mat-row
+                                *matRowDef="let row; columns: displayedColumns"
+                                (click)="selection.toggle(row)"
+                            ></tr>
+                        </table>
+                    </div>
+                    } @case("assign"){
+                        <div class="flex flex-col">
+
+                        </div>
+                    }  @case("register"){
+                        <!-- Agregar componente de registro aqui-->
+                    }}
                 </div>
             </div>
         </div>
