--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col flex-auto min-w-0">
     <!-- Main -->
-    <div class="flex-auto p-6 sm:p-10">
+    <div class="flex-auto  px-6 py-4 sm:px-10 sm:py-7">
         <!-- CONTENT GOES HERE -->
         <div class="flex flex-col">
             <div class="grid grid-cols-3 gap-4">
@@ -25,19 +25,10 @@
             </div>
             <div class="flex flex-col gap-4">
                 <div>
-                    <mat-button-toggle-group
-                        [(ngModel)]="items"
-                        aria-label="Font Style"
-                    >
-                        <mat-button-toggle value="list"
-                            >Listar</mat-button-toggle
-                        >
-                        <mat-button-toggle value="assign"
-                            >Asignar Estudiantes</mat-button-toggle
-                        >
-                        <mat-button-toggle value="register"
-                            >Registrar Estudiantes</mat-button-toggle
-                        >
+                    <mat-button-toggle-group [(ngModel)]="items" aria-label="Font Style">
+                        <mat-button-toggle value="list">Listar</mat-button-toggle>
+                        <mat-button-toggle value="assign">Asignar Estudiantes</mat-button-toggle>
+                        <mat-button-toggle value="register">Registrar Estudiantes</mat-button-toggle>
                     </mat-button-toggle-group>
                 </div>
                 <div>
@@ -56,41 +47,27 @@
 
                             }
                         </div>
-                        <table
-                            mat-table
-                            [dataSource]="dataSource"
-                            class="mat-elevation-z8"
-                        >
+                        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                             <!-- Checkbox Column -->
                             <ng-container matColumnDef="select">
                                 <th mat-header-cell *matHeaderCellDef>
-                                    <mat-checkbox
-                                        (change)="
+                                    <mat-checkbox (change)="
                                             $event ? toggleAllRows() : null
-                                        "
-                                        [checked]="
+                                        " [checked]="
                                             selection.hasValue() &&
                                             isAllSelected()
-                                        "
-                                        [indeterminate]="
+                                        " [indeterminate]="
                                             selection.hasValue() &&
                                             !isAllSelected()
-                                        "
-                                        [aria-label]="checkboxLabel()"
-                                    >
+                                        " [aria-label]="checkboxLabel()">
                                     </mat-checkbox>
                                 </th>
                                 <td mat-cell *matCellDef="let row">
-                                    <mat-checkbox
-                                        (click)="$event.stopPropagation()"
-                                        (change)="
+                                    <mat-checkbox (click)="$event.stopPropagation()" (change)="
                                             $event
                                                 ? selection.toggle(row)
                                                 : null
-                                        "
-                                        [checked]="selection.isSelected(row)"
-                                        [aria-label]="checkboxLabel(row)"
-                                    >
+                                        " [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
                                     </mat-checkbox>
                                 </td>
                             </ng-container>
@@ -131,56 +108,34 @@
                                 </td>
                             </ng-container>
 
-                            <tr
-                                mat-header-row
-                                *matHeaderRowDef="displayedColumns"
-                            ></tr>
-                            <tr
-                                mat-row
-                                *matRowDef="let row; columns: displayedColumns"
-                                (click)="selection.toggle(row)"
-                            ></tr>
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="selection.toggle(row)">
+                            </tr>
                         </table>
                     </div>
                     } @case("assign"){
                     <div class="flex flex-col">
                         <mat-form-field class="flex flex-col">
-                            <mat-chip-grid
-                                #chipGrid
-                                aria-label="Fruit selection"
-                            >
+                            <mat-chip-grid #chipGrid aria-label="Fruit selection">
                                 @for (fruit of fruits; track fruit) {
                                 <mat-chip-row (removed)="remove(fruit)">
                                     {{ fruit }}
-                                    <button
-                                        matChipRemove
-                                        [attr.aria-label]="'remove ' + fruit"
-                                    >
+                                    <button matChipRemove [attr.aria-label]="'remove ' + fruit">
                                         <mat-icon>cancel</mat-icon>
                                     </button>
                                 </mat-chip-row>
                                 }
                             </mat-chip-grid>
-                            <input class="w-full"
-                                placeholder="New Fruit..."
-                                #fruitInput
-                                [formControl]="fruitCtrl"
-                                [matChipInputFor]="chipGrid"
-                                [matAutocomplete]="auto"
-                                [matChipInputSeparatorKeyCodes]="
+                            <input class="w-full" placeholder="New Fruit..." #fruitInput [formControl]="fruitCtrl"
+                                [matChipInputFor]="chipGrid" [matAutocomplete]="auto" [matChipInputSeparatorKeyCodes]="
                                     separatorKeysCodes
-                                "
-                                (matChipInputTokenEnd)="add($event)"
-                            />
-                            <mat-autocomplete
-                                #auto="matAutocomplete"
-                                (optionSelected)="selected($event)"
-                            >
+                                " (matChipInputTokenEnd)="add($event)" />
+                            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
                                 @for (fruit of filteredFruits | async; track
                                 fruit) {
                                 <mat-option [value]="fruit">{{
                                     fruit
-                                }}</mat-option>
+                                    }}</mat-option>
                                 }
                             </mat-autocomplete>
                         </mat-form-field>
@@ -189,7 +144,60 @@
                         </div>
                     </div>
                     } @case("register"){
-                    <!-- Agregar componente de registro aqui-->
+                    <!-- Agregar componente de registro aqui -->
+                    <div class="flex-auto py-1 sm:py-3">
+                        <div class="flex flex-col gap-4">
+                            <div class="flex flex-col items-start">
+                                <div class="w-full">
+                                    <form [formGroup]="formRegistrarEstudiante"
+                                        class="flex flex-col p-8 bg-card rounded-2xl shadow overflow-hidden">
+                                        <mat-form-field class="flex-auto">
+                                            <mat-label>Nombre</mat-label>
+                                            <input type="text" matInput formControlName="nombre"
+                                                placeholder="Ingrese su nombre">
+                                            <mat-error
+                                                *ngIf="formRegistrarEstudiante.get('nombre').invalid && formRegistrarEstudiante.get('nombre').touched">
+                                                Falta ingresar nombre
+                                            </mat-error>
+                                        </mat-form-field>
+                                        <mat-form-field class="flex-auto">
+                                            <mat-label>Apellido Paterno</mat-label>
+                                            <input type="text" matInput formControlName="apellidoPaterno" required
+                                                placeholder="Ingrese su apellido paterno">
+                                            <mat-error
+                                                *ngIf="formRegistrarEstudiante.get('apellidoPaterno').invalid && formRegistrarEstudiante.get('apellidoPaterno').touched">
+                                                Falta ingresar apellido paterno
+                                            </mat-error>
+                                        </mat-form-field>
+                                        <mat-form-field class="flex-auto">
+                                            <mat-label>Apellido Materno</mat-label>
+                                            <input type="text" matInput formControlName="apellidoMaterno"
+                                                placeholder="Ingrese su apellido materno">
+                                            <mat-error
+                                                *ngIf="formRegistrarEstudiante.get('apellidoMaterno').invalid && formRegistrarEstudiante.get('apellidoMaterno').touched">
+                                                Falta ingresar apellido materno
+                                            </mat-error>
+                                        </mat-form-field>
+                                        <mat-form-field class="flex-auto">
+                                            <mat-label>DNI</mat-label>
+                                            <input type="number" matInput formControlName="dni"
+                                                placeholder="Ingrese su DNI">
+                                            <mat-error
+                                                *ngIf="formRegistrarEstudiante.get('dni').invalid && formRegistrarEstudiante.get('dni').touched">
+                                                El DNI tiene que tener 8 dígitos
+                                            </mat-error>
+                                        </mat-form-field>
+                                        <div class="flex justify-end mt-4">
+                                            <button mat-raised-button color="warn" class="mr-2">Cancelar</button>
+                                            <button mat-raised-button color="primary"
+                                                [disabled]="formRegistrarEstudiante.invalid">Guardar</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     }}
                 </div>
             </div>
