--- a/angular.client/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/angular.client/src/app/modules/auth/sign-in/sign-in.component.html
@@ -21,7 +21,7 @@
                 <!-- Email field -->
                 <mat-form-field class="w-full">
                     <mat-label>DNI</mat-label>
-                    <input id="email" matInput [formControlName]="'DNI'">
+                    <input id="email" matInput [formControlName]="'email'">
                     <mat-error *ngIf="signInForm.get('email').hasError('required')">
                         El DNI es requerido
                     </mat-error>
