--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -114,7 +114,7 @@
                             <table mat-table [dataSource]="estudiantes" class="mat-elevation-z8">
 
                                 <!-- Nombre Completo Column -->
-                                <ng-container matColumnDef="NombreCompleto">
+                                <ng-container matColumnDef="Nombres">
                                     <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
                                     <td mat-cell *matCellDef="let element">{{ element.NombreCompleto }}</td>
                                 </ng-container>
