--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -108,26 +108,46 @@
                                 <button mat-button>
                                     Iniciar Prueba Psicológica
                                 </button>
-
                                 }
+
                             </div>
-                            <table mat-table [dataSource]="estudiantes" class="mat-elevation-z8">
+                            <ng-container *ngIf="aulaIdSeleccionado && unidadIdSeleccionada; else selectForm">
+                                <table mat-table [dataSource]="estudiantes" class="mat-elevation-z8"
+                                    *ngIf="estudiantes.length; else noData">
+                                    <!-- Columna N° -->
+                                    <ng-container matColumnDef="numero">
+                                        <th mat-header-cell *matHeaderCellDef> N° </th>
+                                        <td mat-cell *matCellDef="let estudiante; let i = index"> {{i + 1}} </td>
+                                    </ng-container>
 
-                                <!-- Nombre Completo Column -->
-                                <ng-container matColumnDef="NombreCompleto">
-                                    <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
-                                    <td mat-cell *matCellDef="let element">{{ element.NombreCompleto }}</td>
-                                </ng-container>
+                                    <!-- Columna NombreCompleto -->
+                                    <ng-container matColumnDef="NombreCompleto">
+                                        <th mat-header-cell *matHeaderCellDef> Nombre Completo </th>
+                                        <td mat-cell *matCellDef="let estudiante"> {{estudiante.NombreCompleto}} </td>
+                                    </ng-container>
 
-                                <!-- DNI Column -->
-                                <ng-container matColumnDef="DNI">
-                                    <th mat-header-cell *matHeaderCellDef>DNI</th>
-                                    <td mat-cell *matCellDef="let element">{{ element.DNI }}</td>
-                                </ng-container>
+                                    <!-- Columna Estado -->
+                                    <ng-container matColumnDef="Estado">
+                                        <th mat-header-cell *matHeaderCellDef> Estado </th>
+                                        <td mat-cell *matCellDef="let estudiante"> {{estudiante.Estado}} </td>
+                                    </ng-container>
 
-                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                            </table>
+                                    <tr mat-header-row *matHeaderRowDef="['numero', 'NombreCompleto', 'Estado']"></tr>
+                                    <tr mat-row *matRowDef="let row; columns: ['numero', 'NombreCompleto', 'Estado'];">
+                                    </tr>
+                                </table>
+
+                                <ng-template #noData>
+                                    <div
+                                        style="display: flex; align-items: center; justify-content: center; height: 200px; border: 1px solid #ccc; border-radius: 4px;">
+                                        <p style="text-align: center; color: #999;">No hay información disponible.</p>
+                                    </div>
+                                </ng-template>
+                            </ng-container>
+
+                            <ng-template #selectForm>
+                                <p>Selecciona un formulario.</p>
+                            </ng-template>
                         </div>
                         } @case("assign"){
                         <div class="flex flex-col">
